# SmartGestion_ParaPharmacie

./: .gitignore  DATABASE_FIX.sql  FIX_FK_constraints.sql  FIX_UNIQUE_REF_PER_USER.sql  MIGRATION_add_user_id.sql  MIGRATION_portefeuille.sql  MIGRATION_product_batches.sql  MIGRATION_v2.sql  README.md  REMISE_PAGE_RESTORE.md  RLS_FIX.sql  RLS_SIMPLE.sql  SCRIPT_VIDEO_DEMO.md  SPEC.md  STORAGE_SETUP.sql  catalogue_beautymall.xlsx  catalogue_maroc_unifie.xlsx  catalogue_openbeautyfacts.xlsx  catalogue_paralagloire.xlsx  catalogue_parapharma.xlsx  catalogue_unifie.xlsx  catalogue_universparadiscount.xlsx  index.html  metadata.json  package-lock.json  package.json  seed_demo_video.sql  seed_test.sql  server.ts  supabase_migration_activer_filigrane.sql  supabase_migration_complete.sql  supabase_migration_watermark.sql  supabase_schema.sql  vercel.json  vite.config.ts
api/: index.js
scripts/: api-entry.ts  check-hardcoded-placeholders.mjs  check-missing-i18n.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: images.rs  lib.rs  machine.rs
src-tauri/src/db/: auth.rs  commands.rs  mod.rs  schema.rs
src/components/auth/: ProtectedRoute.tsx
src/components/batches/: ProductBatchesDialog.tsx
src/components/catalog/: CatalogSearch.tsx  ImportCatalog.tsx
src/components/dashboard/: ExpirationOverview.tsx  ProductAnalytics.tsx  ProductDetailsModal.tsx  ProductSalesFilter.tsx
src/components/documents/: BonCommandeDocument.tsx  BonLivraisonClientDocument.tsx  BonLivraisonDocument.tsx  DevisDocument.tsx  DocumentPreview.tsx  FactureDocument.tsx  docColors.ts
src/components/forms/: AvoirForm.tsx  AvoirFournisseurForm.tsx  BonCommandeForm.tsx  BonLivraisonClientForm.tsx  BonLivraisonForm.tsx  ClientForm.tsx  DepenseForm.tsx  DevisForm.tsx  FactureForm.tsx  FournisseurForm.tsx  ProduitForm.tsx
src/components/layout/: DashboardLayout.tsx  LanguageSelector.tsx  NotificationDropdown.tsx  Sidebar.tsx  TvaCalculatorWindow.tsx
src/components/parametres/: TicketSettingsDialog.tsx
src/components/reports/: DrillDownDialog.tsx  FilterBar.tsx  KpiGrid.tsx  ReportCharts.tsx  ReportTable.tsx  reportUi.tsx
src/components/ui/: ImageUpload.tsx  PriceCalculatorDialog.tsx  ProductSearchBar.tsx  ProductSelector.tsx  TtcPriceInput.tsx  badge.tsx  button.tsx  card.tsx  collapsible-section.tsx  confirm-dialog.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  kpi-card.tsx  popover.tsx  responsive.tsx  select.tsx  sonner.tsx  switch.tsx  tabs.tsx
src/contexts/: AuthContext.tsx  NotificationsContext.tsx  ThemeContext.tsx
src/hooks/: useBarcodeScanner.ts
src/lib/: batches.ts  dateRange.ts  i18n.ts  notifications.ts  numberToWords.ts  pdfGenerator.ts  reportExport.ts  supabase.server.ts  supabase.ts  ticketSettings.ts  utils.ts
src/lib/catalog/: catalog.ts
src/lib/db/: auth.ts  index.ts  query.ts  relations.ts  runtime.ts  sql.ts
src/locales/: ar.json  en.json  fr.json
src/pages/: Dashboard.tsx  Dashboard.tsx.backup  DatabaseManager.tsx  SqlEditor.tsx  Workspace.tsx
src/pages/auth/: AuthLayout.tsx  LoginPage.tsx
src/pages/avoirs/: AvoirsList.tsx
src/pages/avoirs-fournisseur/: AvoirsFournisseurList.tsx
src/pages/bons-commande/: BonsCommandeList.tsx
src/pages/bons-livraison/: BonsLivraisonList.tsx
src/pages/bons-livraison-client/: BonsLivraisonClientList.tsx
src/pages/clients/: ClientsList.tsx
src/pages/depenses/: DepensesList.tsx
src/routes/: api.ts
(+24 files in other folders)
